Make linux start scripts java9 compatible